<resources>
    <string name="app_name">Android Academy</string>
    <string name="avengers_background">Avengers background</string>
    <string name="avengers_main_image">Avengers Main Image</string>
    <string name="avengers_infinity_war">Avengers: Infinity War</string>
    <string name="released">Released:</string>
    <string name="avng_release_date">2018-01-01</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="overview">Overview:</string>
    <string name="avengers_desc" translatable="false">Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2012s The Avengers and 2015s Avengers: Age of Ultron, and the nineteenth film in the Marvel Cinematic Universe (MCU). It was directed by Anthony and Joe Russo, written by Christopher Markus and Stephen McFeely, and features an ensemble cast including Robert Downey Jr., Chris Hemsworth, Mark Ruffalo, Chris Evans, Scarlett Johansson, Benedict Cumberbatch, Don Cheadle, Tom Holland, Chadwick Boseman, Paul Bettany, Elizabeth Olsen, Anthony Mackie, Sebastian Stan, Danai Gurira, Letitia Wright, Dave Bautista, Zoe Saldana, Josh Brolin, and Chris Pratt. In the film, the Avengers and the Guardians of the Galaxy attempt to prevent Thanos from collecting the six all-powerful Infinity Stones as part of his quest to kill half of all life in the universe.
        The film was announced in October 2014 as Avengers: Infinity War – Part 1. The Russo brothers came on board to direct in April 2015, and a month later Markus and McFeely had signed on to write the script for the film, which draws inspiration from Jim Starlins 1991 comic book The Infinity Gauntlet and Jonathan Hickmans 2013 comic book Infinity. In 2016, Marvel shortened the title to Avengers: Infinity War. Filming began in January 2017 at Pinewood Atlanta Studios in Fayette County, Georgia, with a large cast consisting mostly of actors reprising their roles from previous MCU films, including Brolin as Thanos. The production lasted until July 2017, shooting back-to-back with a direct sequel, Avengers: Endgame. Additional filming took place in Scotland, the Downtown Atlanta area, and New York City. With an estimated budget of $316–400 million, it is one of the most expensive films ever made.
        Avengers: Infinity War held its world premiere on April 23, 2018, in Los Angeles, and was released in the United States on April 27. Brolins performance was praised, as was the emotional weight of the story, the visual effects, and action sequences, but the film was criticized for relying on previous MCU films for its story. It was the fourth film and the first superhero film to gross over $2 billion worldwide, breaking numerous box office records. It became the highest-grossing film of 2018 and the fourth-highest-grossing film of all time both worldwide and in the United States and Canada. The films visual effects were nominated at the 91st Academy Awards, 24th Critics Choice Awards, and 72nd British Academy Film Awards. The sequel, Avengers: Endgame, was released in April 2019. </string>
    <string name="avengers_iw_trailer_link">https://www.youtube.com/watch?v=6ZfuNTqbHE8</string>
    <string name="avengers_desc_short">Avengers: Infinity War is a 2018 American superhero film based on the Marvel Comics superhero team the Avengers, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2012s The Avengers and 2015s Avengers: Age of Ultron, and the nineteenth film in the Marvel Cinematic Universe (MCU).</string>
</resources>
