<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avengers_background"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/avng_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/img_side_poster"
                android:layout_width="110dp"
                android:layout_height="160dp"
                android:contentDescription="@string/avengers_main_image"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avng_main" />

            <LinearLayout
                android:id="@+id/movie_details_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/img_side_poster"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/movieTitle"
                    style="@style/movie_title"
                    android:text="@string/avengers_infinity_war" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/release_title"
                        style="@style/titles"
                        android:text="@string/released" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/avng_release_date"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/trailerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/movie_trailer"
                app:layout_constraintStart_toEndOf="@id/img_side_poster"
                app:layout_constraintTop_toBottomOf="@id/movie_details_layout" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_side_poster">

                <TextView
                    android:id="@+id/editText6"
                    style="@style/titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/overview" />

                <TextView
                    android:id="@+id/movieOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/avengers_desc" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>

